# AIjudge

./: .gitignore  README.md  generate_ai_report_update.py
backend/: .gitignore  app.py  config.py  dify.py  pyproject.toml  requirements.txt  run.ps1  软著.txt  软著程序鉴定文档.docx
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: announcements.py  auth.py  contests.py  downloads.py  judge.py  rules.py  verify.py
backend/app/captcha/: __init__.py  color.py  cutter.py  image.py  predictor.py  system.py
backend/app/clients/: dify.py
backend/app/config/: config.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: announcement.py  contest.py  download.py  duplicate.py  judge.py  rule.py  verify.py
backend/app/utils/: storage.py
backend/models/: schemas.py
backend/services/: announcement_service.py  auth_service.py  auto_solver.py  color_analyzer_mem.py  contest_service.py  cutter_mem.py  download_service.py  duplicate_service.py  judge_service.py  location_coord.py  main_pipeline.py  mod_used_mem.py  rule_service.py  utils.py  verifyCertificate.py
backend/storage/announcements/: ada1.json
backend/storage/contests/: contests.json
backend/storage/download_templates/: report_template.html
backend/storage/rules/: ai_creative.json  b5cb283c.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: admin.ts  auth.ts  client.ts  index.ts  judge.ts
onnx/: README.md  export_captcha_onnx.py
(+36 files in other folders)
