[project]
name = "aijudge-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "config>=0.5.1",
    "drissionpage>=4.1.1.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-jose>=3.5.0",
    "loguru>=0.7.3",
    "opencv-python>=4.13.0.92",
    "pypdf>=6.6.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.40.0",
    "weasyprint>=67.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true  # 设为主源
